--- a/introducao-javascript/css/index.css
+++ b/introducao-javascript/css/index.css
@@ -132,3 +132,28 @@ button[disabled=disabled], button:disabled {
 .campo-invalido{
 	border: 1px solid red;
 }
+
+.paciente-invalido {
+	background-color: lightcoral;
+}
+
+#mensagens-erro {
+	color:red;
+}
+
+/* essa clase fadeOut serve para ir sumindo devagarzinho */
+.fadeOut{
+	opacity: 0;
+	transition: 0.5s;
+}
+
+#filtrar-tabela{
+	width: 200px;
+	height: 35px;
+	margin-bottom: 10px;
+}
+
+.invisivel{
+	display: none;
+}
+
